--- a/level4/task2/app/src/main/res/values/strings.xml
+++ b/level4/task2/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">ShoppingList</string>
+    <string name="app_name">Rock, Paper, Scissors!</string>
     <string name="action_settings">Settings</string>
     <string name="what_to_buy">What to buy?</string>
     <string name="how_many">How many?</string>
-    <string name="clear_list">Clear Shopping List</string>
+    <string name="clear_list">Clear game history</string>
     <string name="computer">Computer</string>
     <string name="versus">V.S.</string>
     <string name="you">You</string>
